templates/nsp-prometheus-exporter_template.yaml
---
# Source: nsp-prometheus-exporter/templates/nsp-prometheus-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-nsp-prometheus-exporter
  namespace: default
  labels:
    helm.sh/chart: nsp-prometheus-exporter-1.0.19
    app: release-name
    app.kubernetes.io/name: nsp-prometheus-exporter
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.19"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: container-port
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nsp-prometheus-exporter
    app.kubernetes.io/instance: release-name
---
# Source: nsp-prometheus-exporter/templates/nsp-prometheus-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-nsp-prometheus-exporter
  namespace: default
  labels:
    helm.sh/chart: nsp-prometheus-exporter-1.0.19
    app: release-name
    app.kubernetes.io/name: nsp-prometheus-exporter
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.19"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nsp-prometheus-exporter
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/name: nsp-prometheus-exporter
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: nsp-prometheus-exporter
          env: []
          image: "kvalitetsit/nsp-prometheus-exporter:1.0.19"
          ports:
            - containerPort: 8081
              name: prometheus-port
          volumeMounts:
        - name: release-name-nsp-prometheus-exporter
          securityContext:
            {}
          image: "nginx:1.0.19"
          imagePullPolicy: IfNotPresent
          env: []
          command: [
          ]
          args: [
          ]
          ports:
            - name: container-port
              containerPort: 8080

          resources:
            {}
          
      volumes:
        - configMap:
            name: release-name-nsp-prometheus-exporter-config 
          name: configmap
---
# Source: nsp-prometheus-exporter/templates/nsp-prometheus-exporter-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: release-name-nsp-prometheus-exporter
  namespace: default
  labels:
    helm.sh/chart: nsp-prometheus-exporter-1.0.19
    app: release-name
    app.kubernetes.io/name: nsp-prometheus-exporter
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.19"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "chart-example.local"
      http:
        paths:
